--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Indie+Flower&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="Index.css" />
+        <link href="TheMagicPantry.svg">
         <title>The Magic Pantry</title>
     </head>
     <body class="flexColumn">
