--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Indie+Flower&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/index.html" />
+        <link rel="stylesheet" href="/index.css" />
         <link href="TheMagicPantry.svg">
         <title>The Magic Pantry</title>
     </head>
