--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Indie+Flower&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/index.css" />
-        <link href="TheMagicPantry.svg">
+        <link rel="stylesheet" href="index.css" />
         <title>The Magic Pantry</title>
     </head>
     <body class="flexColumn">
 
         <header>
-            <div><img src="/TheMagicPantry.svg"></div>
+            <div><img src="TheMagicPantry.svg"></div>
         </header>
         <main>
             <div class="mainMessage">A Gift For You!</div>
