corrected web link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="footerContent">6324 Bowness Rd, Calgary Alberta</div>
                 <div>
                     <a>info.themagicpantry@gmail.com</a>
-                    <a href="www.themagicpantry.ca">www.themagicpantry.ca</a>
+                    <a href="https://www.themagicpantry.ca/">www.themagicpantry.ca</a>
                 </div>
             </footer>
         </main>
